# ReqX

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  clean_repo.py  letsgo.py  llm.yaml.example  pyproject.toml  run_agent.py
.github/workflows/: ci.yml
agents/: __init__.py  __main__.py  cli.py  cli_admin.py  cli_chat.py  cli_common.py  cli_doctor.py  cli_spec.py  entrypoints.py  global_prompt.txt  knowledge_api.py  knowledge_http_api.py  knowledge_service.py  knowledge_store.py  llm_factory.py  requirement_excavation_skill.py  transcript_store.py  webui_server.py  yaml_store.py
agents/api/: entrypoints.py  knowledge_http_api.py
agents/cli/: admin.py  chat.py  common.py  doctor.py  main.py  spec.py
agents/core/: llm_factory.py  requirement_excavation_skill.py  types.py
agents/service/: knowledge_service.py
agents/storage/: knowledge_store.py  sqlite_store.py  transcript_store.py  yaml_models.py  yaml_store.py
agents/web/: server.py
agents/web/static/: webui.html
agents/web/ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
agents/web/ui/scripts/: export-webui.mjs
agents/web/ui/src/: App.tsx  api.ts  i18n.ts  index.css  types.ts
doc/: 01_project_overview.md  02_scripts_and_modules.md  03_user_manual.md  04_cli_reference.md  05_end_to_end_workflow.md  06_auth_and_security.md
tests/: test_entrypoints.py  test_optional_deps.py  test_smoke.py
